# alpha

./: .gitignore  Alpha.desktop  com.wadeb.alpha.xml  on-start-recording.sh  on-stop-recording.sh  pyproject.toml  toggle-recording.sh
alpha/: __main__.py
